--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "nprogress": "^0.2.0",
     "sass": "^1.49.7",
